# recipe-db

./: .gitignore  README.md  main.py  pyproject.toml
img/: model-recipes.drawio
sql/: create_tables.sql  drop_tables.sql  initialise_db.sh  insert_data.sql
