[tool.poetry]
name = "recipe-db"
version = "0.1.0"
description = ""
authors = ["oysteinbf <oysteinbf@tutanota.com>"]
readme = "README.md"
packages = [{include = "recipe_db"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.19.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
